--- a/my_tmux/.tmux.conf
+++ b/my_tmux/.tmux.conf
@@ -1,17 +1,49 @@
+# available plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-set -g prefix C-f
+# change prefix
 unbind C-b
+unbind C-f
+set -g prefix C-f
 bind-key C-f send-prefix
+
+
+# window split
+unbind M-e
+unbind M-d
 bind -n M-e split-window -h
 bind -n M-d split-window -v
+
+# pane navigation
+unbind M-h
+unbind M-l
+unbind M-k
+unbind M-j
+
 bind -n M-h select-pane -L
 bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
+
+# pane resizing
+unbind h
+unbind l
+unbind k
+unbind j
 
 bind-key h resize-pane -L 10
 bind-key l resize-pane -R 10
 bind-key k resize-pane -U 10
 bind-key j resize-pane -D 10
 
+# pane zooming
+unbind z
+unbind m
+bind-key m resize-pane -Z
+
+# mouse
 set -g mouse on
+
+# plugin manager init
+run -b '~/.tmux/plugins/tpm/tpm'
