--- a/my_tmux/.tmux.conf
+++ b/my_tmux/.tmux.conf
@@ -1,6 +1,17 @@
 # available plugins
+# plugin manager
 set -g @plugin 'tmux-plugins/tpm'
+# persistence
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# experimental
+# set -g @plugin 'tmux-plugins/tmux-sidebar'
+
+
+# themes
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @themepack 'powerline/block/blue'
 
 # change prefix
 unbind C-b
