--- a/my_tmux/.tmux.conf
+++ b/my_tmux/.tmux.conf
@@ -5,13 +5,12 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# experimental
-# set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin "arcticicestudio/nord-tmux"
+set -g @plugin 'tmux-plugins/tmux-battery'
 
 
-# themes
-set -g @plugin 'jimeh/tmux-themepack'
-set -g @themepack 'powerline/block/blue'
+#set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+
 
 # change prefix
 unbind C-b
