Tmux pane split changes to current dir

--- a/my_tmux/.tmux.conf
+++ b/my_tmux/.tmux.conf
@@ -22,8 +22,8 @@ bind-key C-f send-prefix
 # window split
 unbind M-e
 unbind M-d
-bind -n M-e split-window -h
-bind -n M-d split-window -v
+bind -n M-e split-window -h -c "#{pane_current_path}"
+bind -n M-d split-window -v -c "#{pane_current_path}"
 
 # pane navigation
 unbind M-h
