--- a/my_tmux/.tmux.conf
+++ b/my_tmux/.tmux.conf
@@ -9,7 +9,7 @@ set -g @plugin "arcticicestudio/nord-tmux"
 set -g @plugin 'tmux-plugins/tmux-battery'
 
 
-#set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+# set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 
 
 # change prefix
@@ -54,6 +54,18 @@ bind-key m resize-pane -Z
 
 # mouse
 set -g mouse on
+
+# vim focus integration (for clipboard)
+set -g focus-events on
+
+# vim navigation :D
+set-window-option -g mode-keys vi
+
+# enable wm window titles
+set -g set-titles on
+
+# disable auto renaming
+set -g automatic-rename off
 
 # plugin manager init
 run -b '~/.tmux/plugins/tpm/tpm'
