--- a/my_tmux/.tmux.conf
+++ b/my_tmux/.tmux.conf
@@ -9,7 +9,7 @@ set -g @plugin "arcticicestudio/nord-tmux"
 set -g @plugin 'tmux-plugins/tmux-battery'
 
 
-# set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 
 
 # change prefix
@@ -60,6 +60,14 @@ set -g focus-events on
 
 # vim navigation :D
 set-window-option -g mode-keys vi
+
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+
+# Copies to system buffer too
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+
 
 # enable wm window titles
 set -g set-titles on
